@@ -1,6 +1,7 @@
 plugins {
 	id 'org.springframework.boot' version '2.2.6.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.9.RELEASE'
+	id 'com.google.cloud.tools.jib' version '1.8.0'
 	id 'java'
 	id 'groovy'
 }
@@ -15,6 +16,24 @@ configurations {
 	}
 }
 
+def dockerPassword = hasProperty('gcloudToken') ? gcloudToken : file('../keyfile.json').text
+
+jib {
+	from {
+		image = 'adoptopenjdk/openjdk14:jdk-14.0.2_12-alpine-slim'
+	}
+	to {
+		image = 'gcr.io/streamster-289010/search-service:latest'
+		auth {
+			username = '_json_key'
+			password = dockerPassword
+		}
+	}
+	container{
+		jvmFlags = ['-Dspring.profiles.active=prod', '--enable-preview']
+	}
+}
+
 repositories {
 	mavenCentral()
 }
@@ -24,6 +43,7 @@ ext {
 }
 
 dependencies {
+	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.security.oauth:spring-security-oauth2:2.5.0.RELEASE'
@@ -38,10 +58,14 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	testImplementation 'org.springframework.amqp:spring-rabbit-test'
+	testCompile "org.springframework.security:spring-security-test"
 	testCompile "org.codehaus.groovy:groovy:2.5.13"
 	testCompile platform("org.spockframework:spock-bom:2.0-M3-groovy-2.5")
 	testCompile "org.spockframework:spock-core"
+	annotationProcessor "org.springframework.boot:spring-boot-configuration-processor"
 	testCompile group: 'org.spockframework', name: 'spock-spring', version: '2.0-M3-groovy-2.5'
+	implementation project(":commons")
 }
 
 tasks.withType(JavaCompile) {
